--- a/lostcity/src/_includes/layouts/default.njk
+++ b/lostcity/src/_includes/layouts/default.njk
@@ -14,7 +14,9 @@
 
 {{content | safe}}
 
-<script type=“text/javascript” src=“/scripts/{{ javascript }}.js”></script>
+{% if javascript %}
+    <script type="text/javascript" src="/scripts/{{ javascript }}.js"></script>
+{% endif %}
 
 </body>
 
