--- a/lostcity/src/_includes/layouts/default.njk
+++ b/lostcity/src/_includes/layouts/default.njk
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="/styles/base.css">
     <link rel="stylesheet" href="/styles/{{ stylesheet }}.css">
     
     <title>{{ title }}</title>
@@ -12,7 +13,11 @@
 
 <body>
 
+{% include "_header.html"%}
+
 {{content | safe}}
+
+{% include "_footer.html"%}
 
 {% if javascript %}
     <script type="text/javascript" src="/scripts/{{ javascript }}.js"></script>
