--- a/lostcity/src/styles/homepage.scss
+++ b/lostcity/src/styles/homepage.scss
@@ -1,128 +1,102 @@
-* {background-color:black;
+* {
+    background-color: black;
     font-family: sans-serif;
     font-size: 32px;
-   
-}
-
-@import "header", "footer";
-
-/*header*/
-
-.header-wrapper {display: grid;
-grid-template-columns: 3fr 1fr 1fr 1fr 1fr;
-margin-right:5%;
-margin-left:5%;
 
 }
 
-button {
-    color:white;
- background-color:red;
-border-radius: 25px;
-text-decoration: none;
-border-color:red;
-margin:20%;
+@import "shared/header", "shared/footer";
+
+
+
+
+.wrapper {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: .5fr 1fr;
 
 }
 
 
-
-a {color:white;
-background-color:red;
-text-decoration: none;
-font-size: 75%;}
-
-.logo {grid-column:1/2;
-    max-width: 100%;
-    padding-top:7%;
-    width:80%;
-    
-}
-
-/*header ends*/
-
-
-.wrapper
-{display: grid;
-grid-template-columns: 1fr 1fr 1fr;
-grid-template-rows: .5fr 1fr ;
-
+.des {
+    grid-column: 1/2;
+    grid-row: 1/2;
+    color: white;
+    line-height: 100%;
+    margin-top: 15%;
 }
 
 
-.des {grid-column: 1/2;
-grid-row: 1/2;
-color:white;
-line-height:100%;
-margin-top: 15%;
-}
-
-
-.text
-{
-grid-column: 1/2;
-grid-row: 2/3;
-margin-left:20%;
+.text {
+    grid-column: 1/2;
+    grid-row: 2/3;
+    margin-left: 20%;
 
 }
 
 
 
-.assets {margin-top:10%;
-    margin-left:20%;
-    grid-column:2/4;
-    grid-row:1/3;
-    display:grid;
+.assets {
+    margin-top: 10%;
+    margin-left: 20%;
+    grid-column: 2/4;
+    grid-row: 1/3;
+    display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr;
 }
 
-.assets__milkshake {grid-column: 1/2;
-    grid-row:1/2;
-     z-index:0;
-     transform: rotate(20deg);
+.assets__milkshake {
+    grid-column: 1/2;
+    grid-row: 1/2;
+    z-index: 0;
+    transform: rotate(20deg);
 
-    
+
 }
 
-.assets__burger {grid-column: 2/3;
-    grid-row:1/2;
-    z-index:0;
-    transform:rotate(10deg) scale(2,2);
-    
+.assets__burger {
+    grid-column: 2/3;
+    grid-row: 1/2;
+    z-index: 0;
+    transform: rotate(10deg) scale(2, 2);
+
 }
 
-.assets__fries {grid-column: 3/4;
-    grid-row:1/2;
+.assets__fries {
+    grid-column: 3/4;
+    grid-row: 1/2;
     transform: rotate(-10deg);
 }
 
-.assets__milkshake--1 {grid-column: 3/4;
-    grid-row:3/4;
-z-index:0;
-transform : rotate(-15deg) scale(1.5, 1.5);}
+.assets__milkshake--1 {
+    grid-column: 3/4;
+    grid-row: 3/4;
+    z-index: 0;
+    transform: rotate(-15deg) scale(1.5, 1.5);
+}
 
-.assets__burger--1{grid-column:1/2;
-    grid-row:3/4;z-index:0;
-transform: rotate(10deg);}
+.assets__burger--1 {
+    grid-column: 1/2;
+    grid-row: 3/4;
+    z-index: 0;
+    transform: rotate(10deg);
+}
 
-.assets__fries--1{grid-column: 2/3;
-    grid-row:3/4;z-index:0;
-transform: rotate(5deg) scale(.75, .75);}
-
-.footer-wrapper {
-
-display: grid;
-grid-template-columns: 1fr 2fr;;
-margin-right:5%;
-margin-left:5%;
-
+.assets__fries--1 {
+    grid-column: 2/3;
+    grid-row: 3/4;
+    z-index: 0;
+    transform: rotate(5deg) scale(.75, .75);
 }
 
 
+
 img {
-    
-max-width:30%;}
+
+    max-width: 30%;
+}
+
 /*why isn't my pulse working?
 animation: pulse 1s infinite;
 
@@ -137,97 +111,145 @@ animation: pulse 1s infinite;
 
 img:hover {
 
-    
-    animation: shake 1.0s; 
-   
-    animation-iteration-count: infinite; 
+
+    animation: shake 1.0s;
+
+    animation-iteration-count: infinite;
 
 
-@keyframes shake {
-    0% { transform: translate(1px, 1px) rotate(0deg); }
-    10% { transform: translate(-1px, -2px) rotate(-1deg); }
-    20% { transform: translate(-3px, 0px) rotate(1deg); }
-    30% { transform: translate(3px, 2px) rotate(0deg); }
-    40% { transform: translate(1px, -1px) rotate(1deg); }
-    50% { transform: translate(-1px, 2px) rotate(-1deg); }
-    60% { transform: translate(-3px, 1px) rotate(0deg); }
-    70% { transform: translate(3px, 1px) rotate(-1deg); }
-    80% { transform: translate(-1px, -1px) rotate(1deg); }
-    90% { transform: translate(1px, 2px) rotate(0deg); }
-    100% { transform: translate(1px, -2px) rotate(-1deg); }
-}}
+    @keyframes shake {
+        0% {
+            transform: translate(1px, 1px) rotate(0deg);
+        }
 
-p {font-size:50%;
+        10% {
+            transform: translate(-1px, -2px) rotate(-1deg);
+        }
+
+        20% {
+            transform: translate(-3px, 0px) rotate(1deg);
+        }
+
+        30% {
+            transform: translate(3px, 2px) rotate(0deg);
+        }
+
+        40% {
+            transform: translate(1px, -1px) rotate(1deg);
+        }
+
+        50% {
+            transform: translate(-1px, 2px) rotate(-1deg);
+        }
+
+        60% {
+            transform: translate(-3px, 1px) rotate(0deg);
+        }
+
+        70% {
+            transform: translate(3px, 1px) rotate(-1deg);
+        }
+
+        80% {
+            transform: translate(-1px, -1px) rotate(1deg);
+        }
+
+        90% {
+            transform: translate(1px, 2px) rotate(0deg);
+        }
+
+        100% {
+            transform: translate(1px, -2px) rotate(-1deg);
+        }
+    }
+}
+
+p {
+    font-size: 50%;
     font-weight: 100;
     text-align: left;
-color:white;
-margin-left:30%;}
+    color: white;
+    margin-left: 30%;
+}
 
-h1 {color:white;
+h1 {
+    color: white;
     font-weight: 500;
-text-transform: capitalize;
-list-style-type: none;
-text-align: left;
-margin-left:10%;
-font-size:85%;
+    text-transform: capitalize;
+    list-style-type: none;
+    text-align: left;
+    margin-left: 10%;
+    font-size: 85%;
 
 }
 
-h2 {font-size:70%;
+h2 {
+    font-size: 70%;
     font-weight: 200;
-    color:white;
-text-transform: capitalize;
-text-decoration: none;
-text-align: left;
-margin-left:30%;}
+    color: white;
+    text-transform: capitalize;
+    text-decoration: none;
+    text-align: left;
+    margin-left: 30%;
+}
 
-h3 {font-size:55%;
+h3 {
+    font-size: 55%;
     font-weight: 200;
-    color:white;
-text-transform: capitalize;
-text-decoration: none;
-text-align: left;
-margin-left:30%;}
+    color: white;
+    text-transform: capitalize;
+    text-decoration: none;
+    text-align: left;
+    margin-left: 30%;
+}
 
 
 @media (max-width: 499px) {
-  
-img {max-width:20%;
-display: block;
-margin-left:auto;
-margin-right:auto;
-margin-bottom: 20%;
-margin-top:10%;
-object-position: center;}
 
-p {font-size:50%;
-    font-weight: 100;
-    text-align: left;
-color:white;
-text-transform: capitalize;
-margin-left:10%;}
+    img {
+        max-width: 20%;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        margin-bottom: 20%;
+        margin-top: 10%;
+        object-position: center;
+    }
 
-h1 {color:white;
-    font-weight: 500;
-text-transform: capitalize;
-list-style-type: none;
-text-align: left;
+    p {
+        font-size: 50%;
+        font-weight: 100;
+        text-align: left;
+        color: white;
+        text-transform: capitalize;
+        margin-left: 10%;
+    }
+
+    h1 {
+        color: white;
+        font-weight: 500;
+        text-transform: capitalize;
+        list-style-type: none;
+        text-align: left;
+    }
+
+    h2 {
+        font-size: 75%;
+        font-weight: 200;
+        color: white;
+        text-transform: capitalize;
+        text-decoration: none;
+        text-align: left;
+        margin-left: 10%;
+    }
+
+    h3 {
+        font-size: 60%;
+        font-weight: 200;
+        color: white;
+        text-transform: capitalize;
+        text-decoration: none;
+        text-align: left;
+        margin-left: 10%;
+    }
 }
-
-h2 {font-size:75%;
-    font-weight: 200;
-    color:white;
-text-transform: capitalize;
-text-decoration: none;
-text-align: left;
-margin-left:10%;}
-
-h3 {font-size:60%;
-    font-weight: 200;
-    color:white;
-text-transform: capitalize;
-text-decoration: none;
-text-align: left;
-margin-left:10%;}
-}
-
