--- a/lostcity/src/styles/menu_page.scss
+++ b/lostcity/src/styles/menu_page.scss
@@ -1,63 +1,83 @@
-.wrapper {display:grid; grid-template-columns:1fr 1fr 1fr;
+@import "shared/header", "shared/footer";
+
+.wrapper {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
 
 }
 
-.navbar {grid-column: 2/3;
-text-align: center;
+.navbar {
+    grid-column: 2/3;
+    text-align: center;
 }
 
 .dropbtn {
-        
-        color: white;
-        background-color: red;
-        font-size: 16px;
-        border: none;
-        border-radius: 25px;
-        margin:5%;
-    }
 
-.starters {color:pink;text-align: center;}
+    color: white;
+    background-color: red;
+    font-size: 16px;
+    border: none;
+    border-radius: 25px;
+    margin: 5%;
+}
 
-.burgers {color:purple;text-align: center;}
+.starters {
+    color: pink;
+    text-align: center;
+}
 
-.fountain {color:yellow;text-align: center;}
-.brunch {color:orange;text-align: center;}
+.burgers {
+    color: purple;
+    text-align: center;
+}
 
-    .dropbtn:hover, .dropbtn:focus {
-        background-color: #2980B9;
-    }
+.fountain {
+    color: yellow;
+    text-align: center;
+}
 
-    .dropdown {
-        
-        display: inline-block;
+.brunch {
+    color: orange;
+    text-align: center;
+}
 
-    }
+.dropbtn:hover,
+.dropbtn:focus {
+    background-color: #2980B9;
+}
 
-    .dropdown-content {
-display: none;
-    
-    
-    
+.dropdown {
+
+    display: inline-block;
+
+}
+
+.dropdown-content {
+    display: none;
+
+
+
     z-index: 1;
-    color:black;
-    
-        
-       
-    }
-
-    .dropdown-content a {
-        color:black;
-        display: block;
-        z-index: 1;
-        
-    }
-
-    .dropdown a:hover { display:block;
-        color:black;
-    margin-top:50%;}
-
-    .show {display: block;color:black;}
+    color: black;
 
 
-	
 
+}
+
+.dropdown-content a {
+    color: black;
+    display: block;
+    z-index: 1;
+
+}
+
+.dropdown a:hover {
+    display: block;
+    color: black;
+    margin-top: 50%;
+}
+
+.show {
+    display: block;
+    color: black;
+}
