--- a/lostcity/src/styles/order_form.scss
+++ b/lostcity/src/styles/order_form.scss
@@ -1,23 +1,33 @@
-*{background-color:black;
-font-family: sans-serif;
-color:white;}
+@import "shared/header", "shared/footer";
+
+* {
+    background-color: black;
+    font-family: sans-serif;
+    color: white;
+}
 
 
-fieldset {margin:10%; border:none;
-line-height: 100%;
-display: flex;}
+fieldset {
+    margin: 10%;
+    border: none;
+    line-height: 100%;
+    display: flex;
+}
 
 input {
     margin-top: 2%;
 }
 
-label {margin:10%;}
+label {
+    margin: 10%;
+}
 
-button {margin-top:5%;
-margin-bottom: 5%;
- background-color:red;
-    
+button {
+    margin-top: 5%;
+    margin-bottom: 5%;
+    background-color: red;
+
     border-radius: 25px;
 }
-/*how can i make the save this card go next to the check box?*/
 
+/*how can i make the save this card go next to the check box?*/
