--- a/lostcity/src/styles/order_form.scss
+++ b/lostcity/src/styles/order_form.scss
@@ -4,6 +4,7 @@
     background-color: black;
     font-family: sans-serif;
     color: white;
+
 }
 
 
@@ -12,22 +13,177 @@ fieldset {
     border: none;
     line-height: 100%;
     display: flex;
-}
 
-input {
-    margin-top: 2%;
 }
 
 label {
-    margin: 10%;
+    margin: 5%;
+    font-size: 60%;
+    display: block;
+    text-align: left;
 }
 
-button {
+input {
+    margin-top: 1%;
+    max-width: 25%;
+
+    padding: 1%;
+    box-sizing: border-box;
+    margin-right: 5%;
+    font-size: 60%;
+    display: block;
+
+}
+
+
+
+
+
+
+::placeholder {
+    color: pink;
+
+
+}
+
+select {
     margin-top: 5%;
-    margin-bottom: 5%;
-    background-color: red;
+    appearance: none;
+    padding: 1%;
+    max-width: 25%;
+    font-size: 60%;
 
-    border-radius: 25px;
+
+    cursor: pointer;
+    margin-right: 5%;
+    display: block;
 }
 
-/*how can i make the save this card go next to the check box?*/
+#save {
+    margin-right: 21%;
+
+}
+
+h1 {
+    margin: 5%;
+    font-size: 60%;
+    display: block;
+    text-align: left;
+    font-weight: 400;
+}
+
+/* switch nonsense The switch - the box around the slider 
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 10%;
+    height: 5%;
+    font-size: 60%;
+
+}
+
+/* Hide default HTML checkbox 
+.switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+
+/* The slider 
+.slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    -webkit-transition: .4s;
+    transition: .4s;
+}
+
+.slider:before {
+    position: absolute;
+    content: "";
+    height: 26px;
+    width: 26px;
+    left: 4px;
+    bottom: 4px;
+    background-color: white;
+    -webkit-transition: .4s;
+    transition: .4s;
+}
+
+input:checked+.slider {
+    background-color: #2196F3;
+}
+
+input:focus+.slider {
+    box-shadow: 0 0 1px #2196F3;
+}
+
+input:checked+.slider:before {
+    -webkit-transform: translateX(26px);
+    -ms-transform: translateX(26px);
+    transform: translateX(26px);
+}*/
+/*switch trying again*/
+
+
+
+form {
+    background: #fff;
+    width: 100%;
+    margin: auto;
+    padding: 30px;
+    min-width: 320px;
+    max-width: 540px;
+    box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.16), 0 2px 5px 0 rgba(0, 0, 0, 0.26);
+    border-radius: 3px;
+}
+
+h1 {
+    color: #fff;
+}
+
+.inline-radio {
+    display: flex;
+    border-radius: 3px;
+    overflow: hidden;
+    border: 1px solid #b6b6b6;
+
+
+    div {
+        position: relative;
+        flex: 1;
+    }
+
+    input {
+        width: 100%;
+        height: 60px;
+        opacity: 0;
+    }
+
+    label {
+        position: absolute;
+        top: 0;
+        left: 0;
+        color: #b6b6b6;
+        width: 100%;
+        height: 100%;
+        background: #fff;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        pointer-events: none;
+        border-right: 1px solid #b6b6b6;
+    }
+
+
+
+    input:checked+label {
+        background: #d81b60;
+        font-weight: 500;
+        color: #fff;
+    }
+}
