--- a/lostcity/src/styles/shared/_footer.scss
+++ b/lostcity/src/styles/shared/_footer.scss
@@ -7,3 +7,13 @@
     margin-left: 5%;
 
 }
+
+h3 {
+    font-size: 100%;
+    font-weight: 200;
+    color: white;
+    text-transform: capitalize;
+    text-decoration: none;
+    text-align: left;
+    margin-left: 30%;
+}
