--- a/lostcity/src/styles/order_form.scss
+++ b/lostcity/src/styles/order_form.scss
@@ -8,12 +8,17 @@
 }
 
 
-fieldset {
+/*general*/
+
+
+
+.order-form {
     margin: 10%;
     border: none;
     line-height: 100%;
-    display: flex;
-
+    display: grid;
+    grid-template-columns: 50% 50%;
+    grid-template-rows: 40% 20% 20% 20% 10%;
 }
 
 label {
@@ -26,24 +31,26 @@ label {
 input {
     margin-top: 1%;
     max-width: 25%;
-
     padding: 1%;
     box-sizing: border-box;
     margin-right: 5%;
     font-size: 60%;
     display: block;
-
 }
 
-
-
-
-
+textarea {
+    margin-top: 1%;
+    max-width: 25%;
+    height: auto;
+    padding: 1%;
+    box-sizing: border-box;
+    margin-right: 5%;
+    font-size: 60%;
+    display: block;
+}
 
 ::placeholder {
     color: pink;
-
-
 }
 
 select {
@@ -52,16 +59,9 @@ select {
     padding: 1%;
     max-width: 25%;
     font-size: 60%;
-
-
     cursor: pointer;
     margin-right: 5%;
     display: block;
-}
-
-#save {
-    margin-right: 21%;
-
 }
 
 h1 {
@@ -70,120 +70,124 @@ h1 {
     display: block;
     text-align: left;
     font-weight: 400;
+    border: 1px solid pink;
 }
 
-/* switch nonsense The switch - the box around the slider 
-.switch {
-    position: relative;
-    display: inline-block;
-    width: 10%;
-    height: 5%;
-    font-size: 60%;
+/*name*/
 
+.nameandchoice {
+    grid-column: 1/2;
+    grid-row: 1/2;
 }
 
-/* Hide default HTML checkbox 
-.switch input {
-    opacity: 0;
-    width: 0;
-    height: 0;
+
+
+
+/*address*/
+
+.input-address {
+    grid-column: 1/2;
+    grid-row: 2/3;
 }
 
-/* The slider 
-.slider {
-    position: absolute;
-    cursor: pointer;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: #ccc;
-    -webkit-transition: .4s;
-    transition: .4s;
-}
+/*delivery or pick up*/
 
-.slider:before {
-    position: absolute;
-    content: "";
-    height: 26px;
-    width: 26px;
-    left: 4px;
-    bottom: 4px;
-    background-color: white;
-    -webkit-transition: .4s;
-    transition: .4s;
-}
-
-input:checked+.slider {
-    background-color: #2196F3;
-}
-
-input:focus+.slider {
-    box-shadow: 0 0 1px #2196F3;
-}
-
-input:checked+.slider:before {
-    -webkit-transform: translateX(26px);
-    -ms-transform: translateX(26px);
-    transform: translateX(26px);
-}*/
-/*switch trying again*/
-
-
-
-form {
-    background: #fff;
-    width: 100%;
-    margin: auto;
-    padding: 30px;
-    min-width: 320px;
-    max-width: 540px;
-    box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.16), 0 2px 5px 0 rgba(0, 0, 0, 0.26);
-    border-radius: 3px;
-}
-
-h1 {
-    color: #fff;
-}
-
-.inline-radio {
+.choice {
+    grid-column: 1/2;
+    grid-row: 2/3;
     display: flex;
-    border-radius: 3px;
-    overflow: hidden;
-    border: 1px solid #b6b6b6;
 
+}
 
-    div {
-        position: relative;
-        flex: 1;
-    }
+#delivery {
+    display: none;
+    cursor: grabbing;
 
-    input {
-        width: 100%;
-        height: 60px;
-        opacity: 0;
-    }
+}
 
-    label {
-        position: absolute;
-        top: 0;
-        left: 0;
-        color: #b6b6b6;
-        width: 100%;
-        height: 100%;
-        background: #fff;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        pointer-events: none;
-        border-right: 1px solid #b6b6b6;
-    }
+#pickup {
+    display: none;
+    cursor: grabbing;
+
+}
 
 
 
-    input:checked+label {
-        background: #d81b60;
-        font-weight: 500;
-        color: #fff;
-    }
+.radio_buttons {
+    max-width: 20%;
+    border: solid 2px red;
+    padding: 1%;
+
+}
+
+input[type="radio"]:checked+label {
+    border: solid 2px green;
+}
+
+
+
+/*card*/
+
+.card {
+    grid-column: 2/3;
+    grid-row: 1/2;
+}
+
+#save {
+    margin-right: 21%;
+
+}
+
+.end1 {
+    grid-column: 2/3;
+    grid-row: 2/3;
+}
+
+.end2 {
+    grid-column: 2/3;
+    grid-row: 4/5;
+}
+
+
+/*yes/no*/
+
+
+
+.contact {
+
+    grid-column: 2/3;
+    grid-row: 3/4;
+    display: block;
+
+}
+
+#yes {
+    display: none;
+    cursor: grabbing;
+    border: 2px solid red;
+
+
+}
+
+#no {
+    display: none;
+    cursor: grabbing;
+    border: 2px solid red;
+
+
+}
+
+
+
+.radio_buttons-1 {
+    max-width: 7.5%;
+
+    border: solid 2px red;
+
+
+
+}
+
+input[type="radio"]:checked+label {
+    border: solid 2px green;
 }
